@@ -1,18 +1,16 @@
 name := "Discount"
 
-version := "3.0.1"
+version := "3.1.0"
 
-scalaVersion := "2.13.10"
+scalaVersion := "2.13.12"
 
-val sparkVersion = "3.2.0"
+val sparkVersion = "3.3.0"
 
 //If compiling on JDK 8, the --release 8 flag can be safely removed (needed for backwards compatibility on later JDKs).
 //Also applies to javacOptions below.
 scalacOptions ++= Seq("-deprecation", "--feature", "-release", "8")
 
 javacOptions ++= Seq("--release=8")
-
-//ThisBuild / scapegoatVersion := "1.4.17"
 
 resolvers += "Spark Packages Repo" at "https://dl.bintray.com/spark-packages/maven"
 
@@ -37,11 +35,17 @@ Compile / unmanagedResourceDirectories += { baseDirectory.value / "resources" }
 assembly / test := {}
 
 //Do not include scala library JARs in assembly (provided by Spark)
-assembly / assemblyOption := (assembly / assemblyOption).value.copy(includeScala = false)
+assembly / assemblyOption ~= {
+  _.withIncludeScala(false)
+}
 
 //Run tests in a separate JVM
 Test / fork := true
 
 Test / javaOptions += "-Xmx4G"
+
+//This option required when running tests on Java 17, as of Spark 3.3.0.
+//Can safely be commented out on Java 8 or 11.
+Test / javaOptions += "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
 
 Test / testOptions += Tests.Argument(TestFrameworks.ScalaCheck, "-verbosity", "1")
